<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:background="@color/application_bg"
    android:paddingRight="5dp"
    tools:context="com.sctek.smartglasses.ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/photo_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/gallery"
                android:gravity="center"
                android:text="@string/glass_photo"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/video_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/video"
                android:gravity="center"
                android:text="@string/glass_video"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/live_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/camera"
                android:gravity="center"
                android:text="@string/glass_live"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/setting_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/setting"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/about"
                android:gravity="center"
                android:text="@string/about_glass"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/unbind_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/unbind"
                android:gravity="center"
                android:text="@string/unbind"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/take_photo_bt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bottom_selector"
            android:gravity="center"
            android:text="@string/take_photo"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/take_video_bt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bottom_selector"
            android:gravity="center"
            android:text="@string/take_video"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/sync_phone_hotspot_bt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bottom_selector"
            android:gravity="center"
            android:text="@string/sync_phone_wifi_hotspot"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>
